--- a/theme.css
+++ b/theme.css
@@ -30,19 +30,22 @@ h1 {
 
 h2 {
     font-family: sans-serif;
-    color: rgb(175, 208, 189);
+    color: rgb(196, 213, 203);
     font-size: 28pt;
+    text-align: center;
+
 }
 
 h3 {
     font-family: sans-serif;
-    color: rgb(175, 208, 189);
+    color: rgb(196, 213, 203);
     font-size: 20pt;
+ 
 }
 
 h4 {
     font-family: sans-serif;
-    color: rgb(175, 208, 189);
+    color: rgb(196, 213, 203);
     font-size: 18pt;
 }
 
@@ -174,4 +177,18 @@ li a:hover {
     color: rgb(226, 248, 226);
 }
 
+.education-container {
+    box-sizing: border-box;
+    position: relative;
+    background-color: #31573c9e;
+    border-radius: 50px;
+    display: flex;
+    width: 100%;
+    height: 360px;
+    padding: 40px;
+    margin: 60px 0;
+    justify-content: space-around;
+    overflow: hidden;
+}
+ 
  
