--- a/theme.css
+++ b/theme.css
@@ -17,13 +17,15 @@ body {
 
 .container {
     box-sizing: border-box;
+    font-family: sans-serif;
     width: 80%;
     margin: 0 auto;
+    text-align: center;
 }
 
 h1 {
     font-family: sans-serif;
-    font-size: 100px;
+    font-size: 100pt;
     text-align: center;
     color: rgb(175, 208, 189);
 }
@@ -179,16 +181,45 @@ li a:hover {
 
 .education-container {
     box-sizing: border-box;
-    position: relative;
-    background-color: #31573c9e;
+    background-color: #1b37238b;
     border-radius: 50px;
-    display: flex;
     width: 100%;
-    height: 360px;
-    padding: 40px;
+    height: 760px;
+    padding: 30px;
     margin: 60px 0;
     justify-content: space-around;
     overflow: hidden;
+}
+
+.education-panel {
+    border-radius: 50px;
+    width: 90%;
+    height: 200px;
+    padding: 30px;
+    margin: 20px;
+    background-color: #9ebc9738;
+    text-align: left;
+}
+
+.education-panel h4 {
+    color: rgb(196, 213, 203);
+    font-size: 18pt;
+    margin-top: 10px;
+    margin-bottom: 4px;
+}
+
+.education-panel h5 {
+    color: rgb(196, 213, 203);
+    margin: 50px;
+    margin-top: 30px;
+    margin-bottom: 0px;
+    font-size: 15pt;
+}
+
+.education-panel h6 {
+    color: rgb(196, 213, 203);
+    font-size: 12pt;
+    margin:0;
 }
  
  
