--- a/theme.css
+++ b/theme.css
@@ -513,11 +513,33 @@ li a:hover {
     height: auto;
 }
 
+#themeButton:hover,
+#githubButton:hover,
+#linkedinButton:hover,
+#emailButton:hover {
+    transform: scale(1.1); 
+}
+
 .contact-container {
-    width: 600px;
-
+    box-sizing: border-box;
+    background-color: #75c68c57;
+    border-radius: 50px;
+    width: 100%;
+    height: auto;
+    padding: 30px;
+    margin: 60px 0px;
 }
 
-.contact-container name {
-    width: 300px;;
+.contact-container a {
+    font-family: Arial, sans-serif;
+    line-height: 30px;
+    font-size: 16pt;
+    color: white;
+    text-decoration: none;
 }
+ 
+.contact-container a:hover {
+    font-family: cursive;
+    color: #d5f6d6;
+}
+  
