--- a/theme-dark.css
+++ b/theme-dark.css
@@ -123,3 +123,14 @@ li a:hover {
     color: rgb(10, 31, 15);
 }
 
+.contact-container {
+    background-color: #75c68c57;
+}
+
+.contact-container a {
+    color: white;
+}
+ 
+.contact-container a:hover {
+    color: #d5f6d6;
+}
