--- a/theme-light.css
+++ b/theme-light.css
@@ -39,7 +39,6 @@ li a:hover {
 .project-panel {
     background-color: #8dcbdc58;
     border: 10px solid rgba(129, 196, 218, 0.587);
-
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -47,7 +46,6 @@ li a:hover {
     box-shadow: 0 20px 20px rgba(0, 0, 0, 0.5);
     background-color: #bbe3f1;
     background-color: #8ecae0be;
-
 }
 
 .project-panel h2,
@@ -174,4 +172,26 @@ li a:hover {
 
 #aboutMeButton:hover h3 {
     background-color: rgb(163, 216, 235);
+}
+
+.project-panel2 {
+    background-color: #8dcbdc58;
+    border: 8px solid rgba(129, 196, 218, 0.587);
+    color: rgb(58, 79, 126);
+}
+
+.project-panel2:hover {
+    background-color: #8ecae0be;
+}
+
+.index-container h1 {
+    color: rgb(78, 107, 169);
+}
+
+.index-container h1 a {
+    color: rgba(4, 36, 105, 0.773);
+}
+
+.index-container h1 a:hover {
+    color: rgb(96, 151, 187);
 }
