--- a/theme.css
+++ b/theme.css
@@ -280,7 +280,7 @@ li a:hover {
     box-sizing: border-box;
     background-color: #4b5e5057;
     border-radius: 50px;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 30px;
     margin: 60px 0;
@@ -290,7 +290,7 @@ li a:hover {
 
 .experience-panel {
     border-radius: 50px;
-    width: 90%;
+    width: auto;
     height: auto;
     padding: 30px;
     margin: 20px;
@@ -348,7 +348,7 @@ li a:hover {
     box-sizing: border-box;
     background-color: #1c2f2187;
     border-radius: 50px;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 30px;
     margin: 60px 0;
@@ -358,7 +358,7 @@ li a:hover {
 
 .ec-panel {
     border-radius: 50px;
-    width: 90%;
+    width: auto;
     height: auto;
     padding: 30px;
     margin: 20px;
@@ -563,7 +563,7 @@ li a:hover {
     box-sizing: border-box;
     background-color: #75c68c57;
     border-radius: 50px;
-    width: 100%;
+    width: auto;
     height: auto;
     padding: 30px;
     margin: 60px 0px;
@@ -598,7 +598,6 @@ li a:hover {
         transform: translateX(0);
     }
 }
- 
  
 .index-panel {
     position: relative;
@@ -733,3 +732,172 @@ opacity: 0.3;
 .project-panel2 a.active {
     color: rgb(58, 79, 126);
 }
+
+
+@media only screen and (max-width: 700px) {
+    body {
+        background-size: cover;
+    }
+
+    .container {
+        width: 90%;
+    }
+
+    h1 {
+        font-size: 30pt;
+    }
+
+    h2 {
+        font-size: 16pt;
+    }
+
+    h3 {
+        font-size: 14pt;
+    }
+
+    h4 {
+        font-size: 14pt;
+    }
+
+    div {
+        width: 100%;
+    }
+
+    ul {
+        padding: 10px;
+    }
+
+    li {
+        margin-right: 5px;
+    }
+
+    li a {
+        font-size: 12pt;
+        width: 120px;
+    }
+
+    .project-container {
+        justify-content: center;
+        width: 80%;
+    }
+
+    .project-panel {
+        flex: 0 0 calc(90% - 20px);
+        margin-bottom: 20px;
+        padding: auto;
+     }
+
+    .project-panel h2 {
+        font-size: 16pt;
+    }
+
+    .project-panel p {
+        font-size: 14pt;
+    }
+
+    .education-container,
+    .experience-container,
+    .ec-container,
+    .contact-container {
+        width: auto;
+        padding: 10px;
+        margin: 30px 0;
+    }
+
+    .education-panel,
+    .experience-panel,
+    .ec-panel {
+        width: auto;
+        padding: auto;
+        text-align: center;
+        align-items: center;
+    }
+
+    .education-panel h4,
+    .experience-panel h4,
+    .ec-panel h4 {
+        font-size: 14pt;
+        margin-bottom: 10px;
+    }
+
+    .education-panel h6,
+    .experience-panel h6,
+    .ec-panel h6 {
+        font-size: 14pt;
+        margin-bottom: 6px;
+    }
+
+    .education-panel p,
+    .experience-panel p,
+    .ec-panel p {
+        font-size: 14pt;
+        margin: 20px 0;
+    }
+
+    .ec-panel {
+         display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    
+    .ec-text {
+        padding-left: 0;
+        width: 100%;
+        text-align: center;
+    }
+    
+    .ec-image {
+         width: auto; 
+        align-items: center;
+        transition: transform 0.2s ease-in-out;
+        transition: box-shadow 0.2s ease-in-out;
+    }
+    
+    .ec-image:hover {
+        transform: scale(1.05);
+        box-shadow: 0 0 30px rgba(24, 24, 24, 0.812);
+        cursor: pointer;
+    }
+
+    .index-panel {
+        align-items: center;
+        text-align: center;
+        padding: auto;
+        margin: auto;
+    }
+
+    .index-about-panel {
+        width: 60%;
+        height: auto;
+        align-items: center;
+        padding: auto;
+        margin: auto;
+    }
+ 
+    .project-panel2 {
+        position: relative;
+        background-color: #45644e55;
+        height: auto;
+        padding: 10px 0;
+        border: 8px solid rgb(199, 217, 191);
+        border-radius: 40px;
+        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+        flex: 0 0 calc(26%);
+        margin-bottom: 40px;  
+        text-decoration: none;
+        width: 90%;
+    }
+
+    .project-container-vertical {
+        width: auto;
+        align-items: center;
+        flex-direction: column;
+    }
+}
+
+
+
+ 
+
+ 
