--- a/theme-dark.css
+++ b/theme-dark.css
@@ -137,7 +137,7 @@ li a:hover {
 }
 
 .index-panel {
-    background-image: url("index-dark.jpg");
+    background-image: url("images/index-dark.jpg");
 }
 
 .index-about-panel {
@@ -170,6 +170,14 @@ li a:hover {
 
 .project-panel2:hover {
     background-color: #5d7a63; 
+}
+
+.project-panel2 img {
+    border: 4px solid #c4d5cb;
+}
+
+.project-panel2:hover img {
+    border: 6px solid #c4d5cb;
 }
 
 .index-container h1 {
