--- a/theme-light.css
+++ b/theme-light.css
@@ -20,7 +20,7 @@ h1 {
 }
 
 h2, h3, h4 {
-    color: rgb(58, 79, 126);
+    color: #3a4f7e;
 }
 
 li a {
@@ -147,7 +147,7 @@ li a:hover {
 }
 
 .index-panel {
-    background-image: url("index-light.jpg");
+    background-image: url("images/index-light.jpg");
 }
 
 .index-about-panel {
@@ -182,6 +182,14 @@ li a:hover {
 
 .project-panel2:hover {
     background-color: #8ecae0be;
+}
+
+.project-panel2 img {
+    border: 4px solid #3a4f7e80;
+}
+
+.project-panel2:hover img {
+    border: 6px solid #3a4f7e80;
 }
 
 .index-container h1 {
