--- a/theme.css
+++ b/theme.css
@@ -243,7 +243,7 @@ li a:hover {
     font-size: 15pt;
 }
 
-.education-panel h6 {
+.education-panel h5 {
     color: rgb(196, 213, 203);
     font-size: 12pt;
     font-style: italic;
@@ -318,7 +318,7 @@ li a:hover {
     margin-bottom: 4px;
 }
 
-.experience-panel h6 {
+.experience-panel h5 {
     color: rgb(196, 213, 203);
     font-size: 12pt;
     font-style: italic;
@@ -857,8 +857,8 @@ opacity: 0.3;
         margin-bottom: 10px;
     }
 
-    .education-panel h6,
-    .experience-panel h6,
+    .education-panel h5,
+    .experience-panel h5,
     .ec-panel h6 {
         font-size: 14pt;
         margin-bottom: 6px;
@@ -950,6 +950,10 @@ opacity: 0.3;
 
 .slide-in{
     opacity: 1;
+}
+
+.about-pg-container h3{
+    font-size: 18pt;
 }
 
 
